# Hermes-OS

./: .gitignore  ARCHITECTURE.md  LICENSE  PRD.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
android-native/app/src/main/: AndroidManifest.xml
android-native/app/src/main/assets/: index.html
android-native/app/src/main/res/drawable/: ic_launcher.xml
android-native/scripts/: build_apk.sh
hermes_os/: __init__.py  actions.py  apply.py  approvals.py  cli.py  collect.py  config.py  cron.py  history.py  kanban.py  models.py  profiles.py  redact.py  render_html.py  render_markdown.py  wiki.py
scripts/: generate_llm_wiki_graph.py  hermes-os  install_termux.sh  uninstall_termux.sh
templates/: dashboard.html  digest.md
tests/: test_approvals.py  test_collect.py  test_decision_bridge.py  test_doctor.py  test_guarded_apply.py  test_history.py  test_kanban.py  test_redact.py  test_render_html.py  test_render_markdown.py
tests/fixtures/: _generate_fixtures.py  sample_jobs.json  sample_profile_list.txt  sample_tools_list.txt
tests/fixtures/hermes_home/profiles/bighart/: config.yaml
tests/fixtures/hermes_home/profiles/default/: config.yaml
tests/fixtures/hermes_home/profiles/wiki/: config.yaml
tests/fixtures/sample_wiki/: SCHEMA.md  index-full.md  index.md  log.md
tests/fixtures/sample_wiki/_meta/personal-api/: HEARTBEAT.md
tests/fixtures/sample_wiki/concepts/: modular-flow.md  neuroscience-open-problems.md  predictive-processing.md
tests/fixtures/sample_wiki/queries/: queue-keep.md
(+5 files in other folders)
