[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-os"
version = "0.4.1"
description = "Phone-first active decision interface with Native Decision Bridge and Guarded Apply for Hermes Agent on Android/Termux"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Renardo Berou / Resonant Systems" }]

# No dependencies, by design: Python stdlib only.

[project.scripts]
hermes-os = "hermes_os.cli:main"

[tool.setuptools]
packages = ["hermes_os"]
